--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
     <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
     <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
+    <string name="nasa_image_of_the_day">NASA Image Of The Day</string>
+    <string name="image_displays_whether_hazardous_or_not">Image Displays Whether Hazardous Or Not</string>
+    <string name="help_button">Help Button</string>
 </resources>
